--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 														<li><a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/QmaTvnK9LowJ7bKEjDVExaiGdae48pFWhpQUMLcxuLXNyq/" target="_blank">Raccolta Anteprime Audio in MP3</a></li>
 														<li><a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/QmVQPqXWj9MHcRtYem4eemBngu8fsYT7u5ZkdhpLx2w7CV/" target="_blank">Raccolta Lettere in lingue Straniere</a></li>
 														<li><a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/Qmcu4QeJdM4kaRDUD9ZHXUhpDptU3quGNSEE2daF1YhRrn/" target="_blank">Raccolta di E-Book a cura di GD</a></li>
-														<li><a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/QmWsp2P7N1wNbmL4iW95fE1j9QsbqQxuVhyyjEK4wDcNFz" target="_blank">Lettere - Raccolta Sed Etiam</a></li>
+														<li><a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/QmWsp2P7N1wNbmL4iW95fE1j9QsbqQxuVhyyjEK4wDcNFz" target="_blank">Lettere</a> | <a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/QmR4QaYQoywJCsyb7FgZZm3AZjcyBm4TSnBLJrLjBxpGah" target="_blank">Poesie</a> - Raccolta Sed Etiam</a></li>
 														<!-- <li><a href="https://gold-male-wallaby-623.mypinata.cloud/ipfs/QmR4QaYQoywJCsyb7FgZZm3AZjcyBm4TSnBLJrLjBxpGah" target="_blank">Poesie - Raccolta Sed Etiam</a></li>-->
 														
 													
