--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 																		
 										<h4>In italiano</h4>
 										<ul class="alt">
-											<li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Condiscendenza Umana.pdf" target="_blank">Condiscendenza umana</a></li>
-											<li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Io%20ho%20molte%20credenze.pdf" target="_blank">Io ho molte credenze</a></li>
-											<li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/I%20sogni,%20il%20tempo.pdf" target="_blank">I sogni, il tempo</a></li>
-                                            <li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Le%20parole%20che%20non%20si%20possono%20usare.pdf" target="_blank">Le parole che non si possono usare</a></li>
-											<li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Sino%20Polis.pdf" target="_blank">Sino Polis</a></li>
-                                            <li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Mercurio,%20io%20e%20tu.pdf" target="_blank">Mercurio, io e tu</a></li>
-											<li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Te%20lo%20colorerei.pdf" target="_blank">Te lo colorerei</a></li>
-											<li><a href="https://beneinst.github.io/beneinstnft/pdf/lettere/Per%20che%20sempre.pdf" target="_blank">Per ch’è sempre</a></li>
+											<li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Condiscendenza Umana.pdf" target="_blank">Condiscendenza umana</a></li>
+											<li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Io%20ho%20molte%20credenze.pdf" target="_blank">Io ho molte credenze</a></li>
+											<li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/I%20sogni,%20il%20tempo.pdf" target="_blank">I sogni, il tempo</a></li>
+                                            <li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Le%20parole%20che%20non%20si%20possono%20usare.pdf" target="_blank">Le parole che non si possono usare</a></li>
+											<li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Sino%20Polis.pdf" target="_blank">Sino Polis</a></li>
+                                            <li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Mercurio,%20io%20e%20tu.pdf" target="_blank">Mercurio, io e tu</a></li>
+											<li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Te%20lo%20colorerei.pdf" target="_blank">Te lo colorerei</a></li>
+											<li><a href="https://beneinst.github.io/beneinst.nft/pdf/lettere/Per%20che%20sempre.pdf" target="_blank">Per ch’è sempre</a></li>
 											
 										</ul>
 
