--- a/1/index.html
+++ b/1/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Beneinst - Diari, memorie e umani</title>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
