ci siamo in due

--- a/1/index.htm
+++ b/1/index.htm
@@ -541,7 +541,7 @@ Grazie per aver scelto Beneinst. Siamo felici di avere la tua fiducia!</p>
 							<form action="mailto:gerardo.dorrico@gmail.com?subject=Comunicazione da Beneinst.eu NFT" method="post" enctype="text/plain">
     <div class="fields">
         <div class="field half">
-            <input type="text" name="name" id="name" placeholder="Name" required/>
+            <input type="text" name="name" id="name" placeholder="Nome" required/>
         </div>
         <div class="field half">
             <input type="email" name="email" id="email" placeholder="Email" required/>
