--- a/2/index.html
+++ b/2/index.html
@@ -89,7 +89,7 @@
 							<li><a href="https://www.youtube.com/channel/UCvt2qXLmJbAlLYmQUKincfg" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 							<li><a href="https://gerardo-dorrico.medium.com/" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 							<li><a href="http://html5up.net" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-							<li><a href="mailto:gerardo.dorrico@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<!--<li><a href="mailto:gerardo.dorrico@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>-->
 						</ul>
 
 				</div>
