--- a/3/index.html
+++ b/3/index.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-KvAgtLx/f//JLrO3+R8Yw7kacJv4LZuVfwL/3ULfB3TWI+M8SL0yZ2UhzsrJG5PPw4Wk4gg1ZBpL6Tu1bmUxrQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 <link rel="stylesheet" href="main.css" />
 <noscript><link rel="stylesheet" href="noscript.css" /></noscript>
         
